Fix spacing of login header

--- a/app/Moneteer.Identity/Styles/base.scss
+++ b/app/Moneteer.Identity/Styles/base.scss
@@ -17,3 +17,7 @@ ul {
 //     color: $text-light-color;
 //     text-transform: uppercase;
 // } 
+
+h1 {
+    font-size: 3em;
+}
